--- a/games/twitch-tetris/controlsStyles.css
+++ b/games/twitch-tetris/controlsStyles.css
@@ -34,6 +34,15 @@ input[type="checkbox"] {
     width: 1em;
     height: 1em;
 }
+input[type="range"] {
+    accent-color: #008000;
+}
+input[type="range"]::-webkit-slider-thumb {
+    cursor: pointer;
+}
+input[type="range"]::-moz-range-thumb {
+    cursor: pointer;
+}
 input[type="checkbox"]:checked {
     background-color: #008000;
 }
