--- a/games/twitch-tetris/controlsStyles.css
+++ b/games/twitch-tetris/controlsStyles.css
@@ -35,12 +35,29 @@ input[type="checkbox"] {
     height: 1em;
 }
 input[type="range"] {
+    margin-top: .5em;
+    margin-bottom: .5em;
+    appearance: none;
+    -webkit-appearance: none;
+    width: 100%;
+    height: .25em;
+    background-color: #008000;
     accent-color: #008000;
 }
 input[type="range"]::-webkit-slider-thumb {
+    appearance: none;
+    webkit-appearance: none;
+    width: 10px;
+    height: 10px;
+    background-color: #008000;
     cursor: pointer;
 }
-input[type="range"]::-moz-range-thumb {
+input[type="range"]::-webkit-slider-thumb {
+    appearance: none;
+    webkit-appearance: none;
+    width: 10px;
+    height: 10px;
+    background-color: #008000;
     cursor: pointer;
 }
 input[type="checkbox"]:checked {
